fixed news card overflow, changed favicon and page title

--- a/front-end/src/app/components/news-shower/news-shower.component.css
+++ b/front-end/src/app/components/news-shower/news-shower.component.css
@@ -1,7 +1,7 @@
 .news-content-grid {
     width: 100%;
     display: grid;
-    grid-template-columns: minmax(200px, 1fr) minmax(500px, 4fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);
+    grid-template-columns: minmax(200px, 1fr) minmax(150px, 4fr) minmax(60px, 1fr) minmax(60px, 1fr) minmax(60px, 1fr);
     grid-template-rows: 100px 50px;
     grid-template-areas:
         'img content likes comments views'
@@ -71,4 +71,24 @@ section.news-content-tags {
     text-overflow: ellipsis;
     white-space: nowrap;
     display: inline-block;
+}
+
+.lg-image-hide {
+    display: block;
+}
+
+@media only screen and (max-width: 1200px) {
+    .lg-image-hide {
+        display: none;
+    }
+
+    .news-content-grid {
+        grid-template-areas:
+            'content content likes comments views'
+            'tags    tags    actv  actv     actv';
+    }
+
+    section.news-content-tags {
+        padding: 0.5rem;
+    }
 }
